# uulib

./: .#uulib.cabal  .travis.yml  CHANGELOG  COPYRIGHT  LICENSE  Makefile.in  README  README.md  configure.in  release.nix  uulib.cabal  uulib.cabal.in
benchmark/: README  uulib-benchmark.cabal
benchmark/results/: bench-eval.csv  bench-parseio.csv  bench-prfl-eval.csv  bench-prfl-parseio.csv
benchmark/src/: Main.hs
example-parser/: Example.hs  README  Scanner.x
examples/bibtex/: Bibtex.hs
examples/parser/: Example.hs  Makefile  Scanner.x
src/: DDataProps.hs
src/UU/: PPrint.hs  Parsing.hs  Pretty.hs  Scanner.hs
src/UU/DData/: IntBag.hs  IntMap.hs  IntSet.hs  Map.hs  MultiSet.hs  Queue.hs  Scc.hs  Seq.hs  Set.hs
src/UU/Parsing/: CharParser.hs  Derived.hs  Examples.hs  Interface.hs  Machine.hs  MachineInterface.hs  Merge.hs  Offside.hs  Perms.hs  StateParser.hs  TraceWrap.hs
src/UU/Pretty/: Basic.hs  Ext.hs
src/UU/Scanner/: GenToken.hs  GenTokenOrd.hs  GenTokenParser.hs  GenTokenSymbol.hs  Position.hs  Scanner.hs  Token.hs  TokenParser.hs  TokenShow.hs
src/UU/Util/: BinaryTrees.hs  PermTree.hs  Utils.hs
test/: Main.hs
