dnl
dnl UULIB configure script
dnl
dnl Parts borrowed from Generic Haskell's configure script

AC_INIT(VERSION)

# Safety check: Ensure that we are in the correct source directory.
AC_CONFIG_SRCDIR([uulib.cabal.in])

AC_PATH_PROG(CUT,cut)

if test "$CUT" = ""; then
  AC_MSG_ERROR([Cannot continue without cut.])
fi

# other programs
AC_PATH_PROG(MV,mv)
AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(MKDIR,mkdir)
AC_PATH_PROG(TOUCH,touch)
AC_PATH_PROG(DIFF,diff)
AC_PATH_PROG(FIND,find)
AC_PATH_PROG(SORT,sort)
AC_PATH_PROG(UNIQ,uniq)
AC_PATH_PROG(AR,ar)
AC_PATH_PROG(RANLIB,ranlib)
AC_PATH_PROG(LD,ld)
AC_PATH_PROG(GREP,grep)
AC_PATH_PROG(CHMOD,chmod)
AC_PATH_PROG(GHC,ghc)

# determine GHC version
ghcVersion=`$GHC --numeric-version`
AC_SUBST(GHC_VERSION, $ghcVersion)

# after ghc 6.4.1 the names of cabal option(s) changed
case $ghcVersion in
  6.4.1)
    optCabalInstances=AllowUndecidableInstances
    ;;
  *)
    optCabalInstances=UndecidableInstances
    ;;
esac

AC_SUBST(EXTENSIONS,"$optCabalInstances")

# cheap relative_dir, see GH for proper use
relative_dir=.

# checking for VERSION file
if test -r "${relative_dir}/VERSION"; then
   FULLVERSION=`cat ${relative_dir}/VERSION`
   VERSION=`echo ${FULLVERSION} | ${CUT} -f1 -d' '`;
else
   AC_MSG_ERROR([Cannot find VERSION file.]);
fi
AC_SUBST(FULLVERSION)
AC_SUBST(VERSION)


AC_OUTPUT(Makefile uulib.cabal)
