cabal-version: >= 1.8
build-type: Simple
name: uulib-benchmark
version: 1.0
license: LGPL
maintainer: Arie Middelkoop <ariem@cs.uu.nl>
homepage: http://www.cs.uu.nl/wiki/HUT/WebHome
description: Benchmark program for UULIB
category: Parsing
stability: Experimental
copyright: Arie Middelkoop

executable uulib-benchmark
  Main-is: Main.hs
  build-depends: base >= 4, base < 5, uulib >= 0.9.13
  build-depends: progression >= 0.4, criterion >= 0.5, deepseq >= 1.1.0.2
  hs-source-dirs: src
  ghc-options: -rtsopts
